--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                 <h3 data-i18n-key="projects_title"></h3>
 
                 <div class="grid-projetos">
-                    <!-- <a href="buono-cookie.html" class="projeto-card"> -->
+                    <div class="projeto-card">
                     <div class="projeto-thumb">
                         <div class="slider-container" id="slider-buono">
                             <img src="img/buono1.jpg" alt="Cardápio Buono Slide 1" class="slide-image">
@@ -175,7 +175,7 @@
                     </p>
                     </a>
 
-                    <!--  <a href="espetinho-fc.html" class="projeto-card"> -->
+                    <div class="projeto-card">
                     <div class="projeto-thumb">
                         <div class="slider-container" id="slider-espetinho">
                             <img src="img/espetinho1.png" alt="App Espetinho Slide 1" class="slide-image">
