--- a/index.html
+++ b/index.html
@@ -156,40 +156,43 @@
             </div>
         </section>
 
-        <section id="projects" class="projetos">
-            <div class="container">
-                <h3 data-i18n-key="projects_title"></h3>
+<section id="projects" class="projetos">
+    <div class="container">
+        <h3 data-i18n-key="projects_title"></h3>
 
-                <div class="grid-projetos">
-                    <div class="projeto-card">
-                    <div class="projeto-thumb">
-                        <div class="slider-container" id="slider-buono">
-                            <img src="img/buono1.jpg" alt="Cardápio Buono Slide 1" class="slide-image">
-                            <img src="img/buono2.jpg" alt="Cardápio Buono Slide 2" class="slide-image">
-                            <img src="img/buono3.jpg" alt="Cardápio Buono Slide 3" class="slide-image">
-                            <img src="img/buono4.png" alt="Cardápio Buono Slide 4" class="slide-image">
-                        </div>
-                    </div>
-                    <h4 data-i18n-key="buono_title"></h4>
-                    <p data-i18n-key="buono_description">
-                    </p>
-                    </a>
+        <div class="grid-projetos">
 
-                    <div class="projeto-card">
-                    <div class="projeto-thumb">
-                        <div class="slider-container" id="slider-espetinho">
-                            <img src="img/espetinho1.png" alt="App Espetinho Slide 1" class="slide-image">
-                            <img src="img/espetinho2.png" alt="App Espetinho Slide 2" class="slide-image">
-                            <img src="img/espetinho3.png" alt="App Espetinho Slide 3" class="slide-image">
-                        </div>
+            <!-- Projeto 1 -->
+            <div class="projeto-card">
+                <div class="projeto-thumb">
+                    <div class="slider-container" id="slider-buono">
+                        <img src="img/buono1.jpg" alt="Cardápio Buono Slide 1" class="slide-image">
+                        <img src="img/buono2.jpg" alt="Cardápio Buono Slide 2" class="slide-image">
+                        <img src="img/buono3.jpg" alt="Cardápio Buono Slide 3" class="slide-image">
+                        <img src="img/buono4.png" alt="Cardápio Buono Slide 4" class="slide-image">
                     </div>
-                    <h4 data-i18n-key="espetinho_title"></h4>
-                    <p data-i18n-key="espetinho_description">
-                    </p>
-                    </a>
                 </div>
+                <h4 data-i18n-key="buono_title"></h4>
+                <p data-i18n-key="buono_description"></p>
             </div>
-        </section>
+
+            <!-- Projeto 2 -->
+            <div class="projeto-card">
+                <div class="projeto-thumb">
+                    <div class="slider-container" id="slider-espetinho">
+                        <img src="img/espetinho1.png" alt="App Espetinho Slide 1" class="slide-image">
+                        <img src="img/espetinho2.png" alt="App Espetinho Slide 2" class="slide-image">
+                        <img src="img/espetinho3.png" alt="App Espetinho Slide 3" class="slide-image">
+                    </div>
+                </div>
+                <h4 data-i18n-key="espetinho_title"></h4>
+                <p data-i18n-key="espetinho_description"></p>
+            </div>
+
+        </div>
+    </div>
+</section>
+
 
 
 
